# predict-iris

./: README.md  api.py  env.example  model.pkl  model.py  pyproject.toml
