[tool.poetry]
name = "predict-iris"
version = "0.1.0"
description = ""
authors = ["Lorenzobattistela <lorenzowottrich@gmail.com>"]
readme = "README.md"
packages = [{include = "predict_iris"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
scikit-learn = "^1.2.2"
Flask = "^2.2.3"
uuid = "^1.30"
jwt = "^1.3.1"
pandas = "^1.5.3"
pyjwt = "^2.6.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
